Added updateAllSigns() to onEnable and to the Reload command.

--- a/locale/en.json
+++ b/locale/en.json
@@ -29,5 +29,5 @@
   "GAME_STOPPED": "§3$GAME$ §2has been stopped.",
   "ALL_GAMES_STOPPED": "All games stopped!",
 
-  "RELOADED_SUCCESSFULLY": "§2The config file was reloaded successfully!"
+  "RELOADED_SUCCESSFULLY": "§2RageMode was reloaded successfully!"
 }
