--- a/locale/en.json
+++ b/locale/en.json
@@ -31,22 +31,22 @@
 
   "RELOADED_SUCCESSFULLY": "§2RageMode was reloaded successfully!",
   
-  "KNIFE_DEATHS": "Knife Deaths:  ",
-  "EXPLOSION_DEATHS": "Explosion Deaths:  ",
-  "ARROW_DEATHS": "Knife Deaths:  ",
-  "AXE_DEATHS": "Arrow Deaths:  ",
-  "DEATHS": "Deaths:  ",
+  "KNIFE_DEATHS": "Knife Deaths: ",
+  "EXPLOSION_DEATHS": "Explosion Deaths: ",
+  "ARROW_DEATHS": "Arrow Deaths: ",
+  "AXE_DEATHS": "Axe Deaths: ",
+  "DEATHS": "Deaths: ",
   
-  "KNIFE_KILLS": "Knife Kills:   ",
-  "EXPLOSION_KILLS": "Explosion Kills:   ",
-  "ARROW_KILLS": "Knife Kills:   ",
-  "AXE_KILLS": "Arrow Kills:   ",
-  "KILLS": "Kills:   ",
+  "KNIFE_KILLS": "Knife Kills: ",
+  "EXPLOSION_KILLS": "Explosion Kills: ",
+  "ARROW_KILLS": "Arrow Kills: ",
+  "AXE_KILLS": "Axe Kills: ",
+  "KILLS": "Kills: ",
   
-  "KD": "KD:      ",
+  "KD": "KD: ",
   
-  "GAMES": "Games:   ",
-  "WINS": "Wins:    ",
-  "SCORE": "Score:   ",
-  "RANK": "Rank:    "
+  "GAMES": "Games: ",
+  "WINS": "Wins: ",
+  "SCORE": "Score: ",
+  "RANK": "Rank: "
 }
