Added SetLobbyDelay functionality.

--- a/src/main/resources/locale/en.json
+++ b/src/main/resources/locale/en.json
@@ -30,6 +30,8 @@
   "ALL_GAMES_STOPPED": "All games stopped!",
 
   "RELOADED_SUCCESSFULLY": "§2RageMode was reloaded successfully!",
+  
+  "SUCCESS": "§2Success!",
 
   "KNIFE_DEATHS": "Knife Deaths: ",
   "EXPLOSION_DEATHS": "Explosion Deaths: ",
