--- a/src/main/resources/locale/fr.json
+++ b/src/main/resources/locale/fr.json
@@ -30,6 +30,8 @@
   "ALL_GAMES_STOPPED": "Tous les jeux sont arrêtes!",
 
   "RELOADED_SUCCESSFULLY": "§2RageMode a été rechargé avec succès!",
+  
+  "SUCCESS": "§2Succès!",
 
   "KNIFE_DEATHS": "Mort par couteau: ",
   "EXPLOSION_DEATHS": "Mort par explosion: ",
