--- a/src/main/resources/locale/fr.json
+++ b/src/main/resources/locale/fr.json
@@ -18,7 +18,7 @@
   "PLAYER_JOINED": "§2$PLAYER$ §9est entre dans le jeu.",
   "PLAYER_COULD_NOT_JOIN": "§4$PLAYER$ ne peut pas entrer le RageMode jeu $GAME$.",
 
-  "REMOVED_NON_EXISTANT_GAME": "§4Ne supprimes pas jeux inexistants!",
+  "REMOVED_NON_EXISTENT_GAME": "§4Ne supprimes pas jeux inexistants!",
   "GAME_RUNNING": "§4Ce jeu est en marche pour le moment. Patientez jusqu' le jeu est fini.",
   "REMOVED_SUCCESSFULLY": "Le jeu $GAME$ a été supprimé avec succès.",
 
@@ -54,6 +54,7 @@
   "RANK": "Rang: ",
 
   "NOT_PLAYED_YET": "Ce joueur n'a pas joué sur le serveur jusqu'ici",
+  "PLAYER_NONEXISTENT": "That player doesn't even exist.",
 
   "BROADCAST_AXE_KILL": "§a$VICTIM$ §3a été tué §a$KILLER$ §3par une §6CombatAxe §3.",
   "BROADCAST_ARROW_KILL": "§a$VICTIM$ §3a été tué par une §6trame directe d'une flèche §3de §a$KILLER$ §3.",
